# Project_test

./: .gitignore  README.md  main.py  pyproject.toml
data/: names_ru.txt  names_us.txt
src/: Path.py  add.py  feature.py  feature0.1.py  feature1.0.py  file3.py  foo.py  hello.py  students.txt
tests/: 2.py  Jupiter.py  RobotVacuum.py  Songs.py  Spaceship.py  Weather.py  conftest.py  test_add.py  test_file.py  test_sum.py
training/: 1.py  Homework.py  Path.py  Test.py  The console program 1.py  Walk.py
