[project]
name = "project-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii_Lobachev",email = "lobachev_e_96@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.1"
black = "^25.1.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.git
      | \.venv
      | \.flake8
      | \.tox
  )/
  | Path.py
)
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
skip_gitignore = true
